Added basic registration form/fixes for login form.
-When the user clicks the login or register buttons on the main page,
the login dropdown or registration modal will pop up, respectively.
-The "register" link in the login dropdown will display the modal.

--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -135,6 +135,10 @@ nav.navbar .dropdown-form li + li:before {
 	border-bottom: 1px solid rgba(0,0,0,0.2);
 }
 
+.landing a.registration-link {
+	cursor: pointer;
+}
+
 .landing .header h1,
 .landing .header h3,
 .landing .callout h1 {
