--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -148,10 +148,12 @@ nav.navbar .dropdown-form li + li:before {
 
 .landing .about {
 	padding: 50px 0;
+	height: 33%;
 }
 
 .landing .services {
 	padding: 50px 0;
+	height: 66%;
 }
 
 .landing .service-item {
