--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -148,12 +148,22 @@ nav.navbar .dropdown-form li + li:before {
 
 .landing .about {
 	padding: 50px 0;
-	height: 33%;
+}
+
+.landing .about img {
+	margin: auto;
+}
+
+.landing .about img.img-right {
+	margin-right: 0;
+}
+
+.landing .about img.img-left {
+	margin-left: 0;
 }
 
 .landing .services {
 	padding: 50px 0;
-	height: 66%;
 }
 
 .landing .service-item {
