Added more functionality for login/out.
Display a user menu on the homepage nav menu if
a user is logged in. Also added a message bar
to display any set flashdata, for instance if
a user logs in or out.

--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -44,6 +44,27 @@ hr.medium {
 	background-color: #FFF;
 }
 
+.flash-message {
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	position: fixed;
+	top: 60px;
+	z-index: 999;
+}
+
+.flash-message p {
+	width: 85%;
+	margin: auto;
+	padding: 10px;
+	background: #33ab00;
+	opacity: 0.85;
+	border-radius: 5px;
+	color: #fff;
+	font-size: 1.1em;
+	font-weight: bold;
+}
+
 /* Custom Button styles */
 .btn {
 	border-radius: 0;
@@ -89,7 +110,7 @@ nav.navbar .navbar-brand img {
 	max-height: 100%;
 }
 
-nav.navbar .dropdown-menu {
+nav.navbar .login-dropdown {
 	padding: 15px;
 	min-width: 300px;
 }
