Renamed some elements, changed classes to IDs.
Changed the login-msg class to simply message since it will
also be used in the registration modal.
Made the login progress spinner an ID rather than class,
will do the same for the registration progress spinner.

--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -243,24 +243,25 @@ nav.navbar .dropdown-form li + li:before {
 	border-top-right-radius: 0;
 }
 
-#login-form .login-button,
-#login-form .login-msg {
+#login-form #login-button,
+#login-form .message {
 	height: 40px;
 }
 
-#login-form .login-button button[type="submit"] {
+#login-form button[type="submit"] {
 	background: none;
 	border: none;
 }
 
-#login-form .login-button button[type="submit"],
-#login-form .login-msg p {
+#login-form button[type="submit"],
+#login-form .message p {
 	display: table-cell;
 	text-align: center;
 	vertical-align: middle;
 }
 
-#login-form .login-msg p {
+#login-form .message p {
 	color: #FF0000;
 	font-weight: bold;
+	padding-top: 10px;
 }
