Set up basic user registration.
Users may now create accounts via the registration modal,
so far this is very basic but the base system is in place.
TODO:
    Implement a captcha or email verification system.
    Pull in school and major and link them to the user
        (must first build school/major db tables).

--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -220,7 +220,7 @@ nav.navbar .dropdown-form li + li:before {
 	margin-top: 0;
 }
 
-/* Login form styles */
+/* Login/Registration form styles */
 #login-form .form-control {
 	position: relative;
 	height: auto;
@@ -244,23 +244,29 @@ nav.navbar .dropdown-form li + li:before {
 }
 
 #login-form #login-button,
-#login-form .message {
+#login-form .message,
+#register-form #register-button,
+#register-form .message {
 	height: 40px;
 }
 
-#login-form button[type="submit"] {
+#login-form button[type="submit"],
+#register-form button[type="submit"] {
 	background: none;
 	border: none;
 }
 
 #login-form button[type="submit"],
-#login-form .message p {
+#login-form .message p,
+#register-form button[type="submit"],
+#register-form .message p {
 	display: table-cell;
 	text-align: center;
 	vertical-align: middle;
 }
 
-#login-form .message p {
+#login-form .message p,
+#register-form .message p {
 	color: #FF0000;
 	font-weight: bold;
 	padding-top: 10px;
